# When releasing to crates.io:
#
# - last check for all TODO, FIXME, expect, unwrap.
# - re-read and final polish of documentation
# - run cargo udeps
# - run cargo clippy
# - recheck log statements (informative, none left that were just for development, ...)
# - Update CHANGELOG.md.
# - Update version numbers in Cargo.yml, Cargo.toml, install section of readme.
# - verify CI result
# - run cargo test on dependent crates
# - cargo publish
# - merge dev branch into master
# - create git tag with version number
#
[package]
name = "md_questions"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
description = "Parses questions from markdown file"
keywords = ["markdown", "parser", "quiz"]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["parsing"]
repository = "https://github.com/devzbysiu/md-questions"
homepage = "https://github.com/devzbysiu/cargo-blinc"
documentation = "https://docs.rs/md-questions"
edition = "2018"

[dependencies]
nom = "5.1.1"
pretty_env_logger = "0.4.0"
log = "0.4.8"
